--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "waapishow",
   "dependencies": {
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "jquery-ui": "^1.11.4",
+    "font-awesome": "^4.5.0"
   }
 }
